objects/Project_Bill_Code__c.object
<CustomObject>
    <description>Project/Bill Code for Internal Job</description>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Descriotion__c</fullName>
        <label>Code Descriotion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Group__c</fullName>
        <label>Code Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Value__c</fullName>
        <label>Code Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project/Bill Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code_Value__c</columns>
        <columns>Code_Group__c</columns>
        <columns>Code_Descriotion__c</columns>
        <columns>Location_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project/Bill Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project/Bill Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>